apps/data-science/open-webui/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  # needed to run the stupid container as root
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
