apps/data-science/open-webui/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: open-webui
  name: open-webui
spec:
  type: LoadBalancer
  ports:
    - name: "3000"
      port: 3000
      targetPort: 8080
  selector:
    app: open-webui
